--- a/20230426_calib/calib/ouster00.yaml
+++ b/20230426_calib/calib/ouster00.yaml
@@ -59,3 +59,17 @@ translation_sensor_body_imu: !!opencv-matrix
   dt: f
   data: [-0.035980, 0.017385, -0.033028]
 timeshift_sensor_body_imu: 0.0  # unknown
+
+# # Extrinsics from the sensor (reference) to vehicle_frame_cam00 (target)
+# # calibration approach: LCE-calib
+# quaternion_sensor_vehicle_frame_cam00:
+#   rows: 1
+#   cols: 4
+#   dt: f
+#   data: [ 0.49528, -0.50506, 0.503696, -0.4958782 ]
+# translation_sensor_vehicle_frame_cam00:
+#   rows: 1
+#   cols: 3
+#   dt: f
+#   data: [ 0.2751, 0.40420, -0.097767 ]
+# timeshift_sensor_vehicle_frame_cam00: 0.0  # unknown
