update extrinsics: 20230618/vehicle_frame_cam00

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3.2)
-project(ramlab_parameter)
+project(calibration_files)
 
 # explicitly set std=c++14 to remove errors from pcl library
 set(CMAKE_CXX_STANDARD 14)
@@ -10,8 +10,8 @@ set(CMAKE_CXX_FLAGS "-O3")
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
 
-find_package(OpenCV REQUIRED)
-find_package(yaml-cpp REQUIRED)
+# find_package(OpenCV REQUIRED)
+# find_package(yaml-cpp REQUIRED)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
