--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ramlab_parameter</name>
+  <name>calibration_files</name>
   <version>0.0.0</version>
-  <description>The ramlab_parameter package</description>
+  <description>The calibration_files package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
