20230618: manually correct extrinsics from bodyimu to vehicle_frame_cam00, and vehicle_frame_cam00 to vehicle_frame_cam01

--- a/20230618_calib/calib/vehicle_frame_cam00.yaml
+++ b/20230618_calib/calib/vehicle_frame_cam00.yaml
@@ -48,10 +48,10 @@ quaternion_sensor_body_imu:
   rows: 1
   cols: 4
   dt: f
-  data: [ 0.491947, 0.504210, -0.506383, 0.4973285 ]
+  data: [ 0.49194898, 0.50420988, -0.50638300, 0.4973277 ]
 translation_sensor_body_imu:
   rows: 1
   cols: 3
   dt: f
-  data: [ 0.436697, -0.058493, -0.292460 ]
-timeshift_sensor_body_imu: -0.013618216766727708 # t_body_imu = t_cam + timeshift
+  data: [ 0.34251222657, 0.0038493, -0.3336474 ]
+timeshift_sensor_body_imu: 0.0 # t_body_imu = t_cam + timeshift
